# trust-lang

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
docs/: go.mod  go.sum  hugo.toml  netlify.toml
docs/content/: README.txt
docs/content/en/blog/: reference-solution.md  wrong-term-ai.md
docs/content/en/docs/ops/: block.md
docs/content/en/docs/syntax/: namespace.md
docs/content/en/docs/types/: _index.md  funcs.md
docs/content/en/playground/: thread.src
docs/content/ru/: _index.html
docs/content/ru/blog/: generics.md  newlang.md  release-0.5.md  ups-lang.md  wrong-term-ai.md
docs/content/ru/docs/1_concept/: _index.md
docs/content/ru/docs/2_syntax/: 1_naming.md  2_namespace.md  3_modules.md  4_memory.md  5_generics.md  6_macros.md  7_dsl.md  8_proof.md  _index.md
docs/content/ru/docs/3_types/: 10_convert.md  1_type_system.md  2_numbers.md  3_strings.md  4_dicts.md  5_class.md  6_funcs.md  7_iters.md  8_other.md  9_native.md  _index.md
docs/content/ru/docs/4_operators/: _index.md  async.md  block.md  create.md  throw.md  with.md
docs/content/ru/docs/5_arch/: _index.md  llvm.md  mangling.md  pragmas.md  sysprop.md  visibility.md
docs/layouts/_default/_markup/: render-heading.html
include/: gencpp.cppm  gencpp.hpp  runtime.cppm  trust.cppm
include/cli/: CMakeLists.txt  README.md  cli.cpp  cli.hpp  cli_parser.hpp  main.cpp  option_cli_def.hpp  options.h.in
include/diag/: CMakeLists.txt  README.md  context.hpp  diag.hpp  error.hpp  location.hpp  options.cpp  options.hpp
include/gencpp/: CMakeLists.txt  README.md  ast.hpp  ast_builder.hpp  ast_printer.hpp  ast_validator.hpp  ast_visitor.hpp  cpp_generator.hpp  gencpp.hpp  semantic_analyzer.hpp  symbol_table.hpp  types.hpp
include/jit/: README.md
include/lsp/: README.md  error_codes.hpp
include/optimizer/: README.md
include/parser/: CMakeLists.txt  README.md  TOKEN_FORMAT.md  lexer.hpp  lexer.l  mmproc.hpp  parser.hpp  parser.y  token.hpp  token_info.hpp  tokens.def
include/parser/scripts/: gen_tokens.py
include/precompiled/: CMakeLists.txt  torch_pch.hpp
include/repl/: README.md
include/runtime/: CMakeLists.txt  README.md  dict.hpp  rational.hpp  tensor.hpp  trusted-cpp.hpp  var.hpp  var_conversions.hpp  var_template.hpp
include/stdlib/: README.md
include/token/: CMakeLists.txt  README.md  lexer.l  parser.y  token.hpp  tokens.def
include/token/scripts/: gen_tokens.py
include/trust/: CMakeLists.txt
include/types/: CMakeLists.txt  README.md  type_info.hpp
include/variable/: README.md
src/cli/: cli.cpp  cli_parser.cpp  main.cpp
src/diag/: context.cpp  diag.cpp  main.cpp
src/gencpp/: ast.cpp  ast_printer.cpp  cpp_generator.cpp  semantic_analyzer.cpp
src/parser/: mmproc.cpp
src/runtime/: rational.cpp  tensor.cpp  var_conversions.cpp
src/types/: type_info.cpp
tests/: lit.cfg.py.in
tests/cli/: hello_embed.src  hello_lib.src
tests/gencpp/: README.md  array.ast  assignment_expr_target.ast  ast_format_parser.cpp  ast_format_parser.hpp  binary_op.ast  block_item_dispatch.ast  break_continue.ast  break_continue_deep.ast  cast_expr.ast  continue_outer_dowhile.ast  do_while_break_continue.ast  do_while_nested.ast  do_while_nested_pure.ast  do_while_stmt.ast  do_while_triple_nested.ast  embed_expr.ast  enum_decl.ast  gencpp_from_ast.cpp  if_stmt.ast  lit.cfg.py  lit.site.cfg.py.in  matching_stmt.ast  ref_expr.ast  struct_decl.ast  throw_stmt.ast  try_catch_stmt.ast  var_decl.ast  while_else_break.ast  while_else_nested.ast  while_nested.ast  while_simple.ast  while_stmt.ast
unittest/: CMakeLists.txt
unittest/cli/: CMakeLists.txt  cli_test.cpp  cliopt_test.cpp
unittest/diag/: diag_test.cpp  options_test.cpp
unittest/gencpp/: ast_nodes_test.cpp  ast_parsing_test.cpp  ast_printing_test.cpp  cpp_generator_test.cpp  gencpp_test.cpp  loop_control_test.cpp  semantic_analyzer_test.cpp
unittest/parser/: lexer_integration_test.cpp  lexer_test.cpp  mmproc_test.cpp  token_gen_test.cpp
unittest/runtime/: rational_test.cpp  tensor_test.cpp  trusted_cpp_test.cpp  var_test.cpp
unittest/token/: token_gen_test.cpp
unittest/types/: type_info_traits_test.cpp
